2006-03-15  Bastien Nocera  <hadess@hadess.net>

	* configure.in: also install the Danish translation, patch from 
	Stanislav Brabec <sbrabec@suse.cz> (Closes: #2051)

2006-03-15  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add *.qtl glob for Quicktime Links files
	(from http://developer.apple.com/documentation/QuickTime/QT6WhatsNew/Chap1/chapter_1_section_53.html)

=== shared-mime-info 0.17 ===
2006-03-14  Bastien Nocera  <hadess@hadess.net>

	* .cvsignore: upd
	* configure.in: 0.17
	* NEWS: upd

2006-03-13  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add Quicktime Media Link magic to
	video/quicktime

2006-03-13  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add "application/x-srt" for .srt subtitle
	files, and make them a subclass of text/plain

2006-03-09  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: make "x-directory/normal" an alias for
	"inode/directory".

2006-03-09  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: make "application/x-cue" a subclass of
	"text/plain". Fixes GNOME #334008. Thanks to Stefan Jol.

2006-03-02  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: make "text/rdf" a subclass of
	"application/xml" instead of "text/plain". Fixes GNOME #331468.
	Thanks to Luca Ferretti.

2006-03-02  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: make "application/x-abiword" a subclass of
	"application/xml". Fixes GNOME #333158/Launchpad #33301.
	Thanks to Lionel Dricot and Sebastien Bacher.

2006-03-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: also add the .divx suffix to AVI

2006-03-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add video/vnd.divx as an alias for AVI files
	(as used on the divx.com website)

2006-02-21  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add "application/x-gnuplot". Fixes #5455.
	Thanks to Triastan Miller.
